h1. Changelog

h2. 1.1 (latest)

* optional possibility to use any ORM you like by configuring casino.user in application.conf
* optional possibility to use a hook, executed after user is created
* fully backwards compatible to 1.0
* a lot more documentation
* testcases for JPA and Siena


h2. 1.0

* name change to Casino
* move to github
* submission to play modules listing


h2. 0.4

* cleaner integration with Play secure => still doublication of Secure.java and Check.java. Not nice.
* support for authorizing (thus setting play session cookies) user across domain boundaries
** routes login/auth_with_token?token=XYZ logout/auth_with_token?token=XYZ
** usecase was: https://example.appspot.com signs http://appspot.com (SessionTransfer controller)
* Support for Roles in User
** Methods hasRole, addRole
** @Check("role:admin") (or any role you use) supported on controller level

h2. 0.3

* support for fixing url for login/login/registration
** example: make sure login runs over https://example.com and NOT over http://example.com
** done via parameter
* moved stuff into subdirectory playsienauser