@@ -2,6 +2,6 @@
 
 require:
     - play
-    - play -> casino 1.0
+    - play -> casino 1.1
     - play -> crudsiena 2.0.2
-    - play -> siena 2.0.6
+    - play -> siena 2.0.7
