@@ -2,5 +2,5 @@ self: play -> casino 1.0
 
 require:
     - play -> play
-    - play -> siena 2.0.6
-    - play -> recaptcha 1.2
+    - play -> siena 2.0.7
+    - play -> recaptcha 1.3
