@@ -7,6 +7,10 @@ h2. 1.1 (latest)
 * fully backwards compatible to 1.0
 * a lot more documentation
 * testcases for JPA and Siena
+* testcases for AfterUserCreationHook
+* bump to latest recaptcha dependency 1.3
+* bump to latest siena dependency 2.0.7
+* bump to latest play dependency 1.2.4
 
 
 h2. 1.0
